k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
      - name: broker-service
        image: "kedarnathpc/broker-service:1.0.2"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP
      port: 8080
      name: web-port
      targetPort: 8080
