k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener-service
  template:
    metadata:
      labels:
        app: listener-service
    spec:
      containers:
      - name: listener-service
        image: "kedarnathpc/listener-service:1.0.2"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: listener-service
spec:
  selector:
    app: listener-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
