k8s/logger.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-service
  template:
    metadata:
      labels:
        app: logger-service
    spec:
      containers:
      - name: logger
        image: "kedarnathpc/logger-service:1.0.2"
        ports:
        - containerPort: 80
        - containerPort: 5001
        - containerPort: 50001
---
apiVersion: v1
kind: Service
metadata:
  name: logger-service
spec:
  selector:
    app: logger-service
  ports:
  - protocol: TCP
    port: 80
    name: web-port
    targetPort: 80
  - protocol: TCP
    port: 5001
    name: rpc-port
    targetPort: 5001
  - protocol: TCP
    port: 50001
    name: grpc-port
    targetPort: 50001
