k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
      - name: mail-service
        image: "kedarnathpc/mail-service:1.0.2"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
