k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: frontend.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8000
  - host: broker-service.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broker-service
            port:
              number: 8080
